[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/scaffolder/src/gui/radial_menu/radial_menu_label.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/style_box_flat_scalable.gd" type="Script" id=3]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_panel_container.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_xs.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_s.tres" type="DynamicFont" id=6]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0, 0, 0, 0.533333 )
border_color = Color( 0, 0, 0, 0 )
corner_detail = 1
shadow_color = Color( 0, 0, 0, 0 )
script = ExtResource( 3 )

[node name="RadialMenuLabel" type="Node2D"]
script = ExtResource( 1 )

[node name="ScaffolderPanelContainer" parent="." instance=ExtResource( 4 )]
mouse_filter = 2
size_flags_vertical = 4
custom_styles/panel = SubResource( 1 )
style = 5
is_unique = true
content_margin_left_override = 4
content_margin_top_override = 4
content_margin_right_override = 4
content_margin_bottom_override = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ScaffolderPanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 51.0
mouse_filter = 2
size_flags_vertical = 4

[node name="ScaffolderLabel" parent="ScaffolderPanelContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 6 )
font_size = "S"

[node name="DisablementExplanation" parent="ScaffolderPanelContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 27.0
margin_right = 0.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 5 )
font_size = "Xs"
